--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "slugify": "^1.3.6"
   }
 }
