--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
     "prettier": "^1.19.1",
-    "slugify": "^1.3.6"
+    "slugify": "^1.3.6",
+    "validator": "^12.2.0"
   }
 }
