--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Andrew",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
+    "ndb": "^1.1.5",
     "prettier": "^1.19.1",
     "slugify": "^1.3.6",
     "validator": "^12.2.0"
