--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
     "ndb": "^1.1.5",
+    "nodemailer": "^6.4.3",
     "prettier": "^1.19.1",
     "slugify": "^1.3.6",
     "validator": "^12.2.0"
