--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Andrew",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3", 
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
