--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ndb": "^1.1.5",
     "nodemailer": "^6.4.3",
     "prettier": "^1.19.1",
+    "pug": "^2.0.4",
     "slugify": "^1.3.6",
     "validator": "^12.2.0",
     "xss-clean": "^0.1.1"
