--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "ndb": "^1.1.5",
     "nodemailer": "^6.4.3",
     "prettier": "^1.19.1",
