--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-rate-limit": "^5.1.1",
     "helmet": "^3.21.3",
     "hpp": "^0.2.3",
+    "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
@@ -39,6 +40,7 @@
     "nodemailer": "^6.4.3",
     "prettier": "^1.19.1",
     "pug": "^2.0.4",
+    "sharp": "^0.24.1",
     "slugify": "^1.3.6",
     "validator": "^12.2.0",
     "xss-clean": "^0.1.1"
